# Node-Editor

./: CMakeLists.txt  Node.cpp  Node.h  README.md  main.cpp
SVG/: svgtopng.py
